# focus-reminder

./: .gitignore  README.md  focus-reminder-app-spec.md  index.html  package-lock.json  package.json  tasks.md
.github/workflows/: release.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CompletionForm.tsx  IdleDashboard.tsx  RecoveryPrompt.tsx  ReminderWindow.tsx  RunningTask.tsx  SettingsPanel.tsx  TaskStartForm.tsx  TodayLog.tsx
src/hooks/: useTaskTimer.ts
src/services/: taskService.ts
src/types/: task.ts
src/utils/: time.test.ts  time.ts
