[package]
name = "focus-reminder"
version = "0.1.0"
description = "A minimal desktop timebox reminder"
authors = ["Focus Reminder"]
edition = "2021"

[lib]
name = "focus_reminder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
